k8s-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp
  labels:
    app: py
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py
  template:
    metadata:
      labels:
        app: py
    spec:
      containers:
      - name: flask-app
        image: srirammk18/py-db:final
        imagePullPolicy: Always
        ports:
        - containerPort: 80
