k8s-deploy/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30002
    protocol: TCP
    name: mysql
