k8s-deploy/py-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    app: pyi
  type: LoadBalancer
