k8s-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pyapp-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 3333
  selector:
    app: py
